--- a/UserServiceApi.csproj
+++ b/UserServiceApi.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Steeltoe.Discovery.ClientCore" Version="3.2.7" />
     <PackageReference Include="Steeltoe.Discovery.Eureka" Version="3.2.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
